--- a/company/index.html
+++ b/company/index.html
@@ -60,11 +60,26 @@
         </div>
         <div class="content">
             <ul class="clearfix">
-                <li>1</li>
+                <li>
+                    <div class="icon">
+                        <img src="images/icon01_01.png" alt="">
+                        <h3>text</h3>
+                    </div>
+                </li>
                 <li>2</li>
                 <li>3</li>
-                <li>4</li>
-                <li>5</li>
+                <li>
+                    <div class="icon">
+                        <img src="images/icon01_01.png" alt="">
+                        <h3>text</h3>
+                    </div>
+                </li>
+                <li>
+                    <div class="icon">
+                        <img src="images/icon01_01.png" alt="">
+                        <h3>text</h3>
+                    </div>
+                </li>
                 <li>6</li>
                 <li>7</li>
                 <li>8</li>
