--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.bxslider.js"></script>
     <script src="js/script.js"></script>
     <script src="js/jquery.colorbox-min.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header id="main_header">
@@ -328,7 +330,7 @@
                         <img src="images/con2_growth.png" alt="">
                         <div class="sec01_cardT">
                             <h4>GROWTH</h4>
-                            <p>직장은 인생의 학교입니다.</p>
+                            <p>직장은 인생의<br>학교입니다.</p>
                         </div>
                     </li>
                     <li>
@@ -340,6 +342,159 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="sec02 clearfix">
+            <div class="sec02_txt">
+                <h2><a href="#">artro logo</a></h2>
+                <p>문화 그 이상의 갤러리,<br>이랜드 아트로 갤러리</p>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+            <div class="swiper mySwiper">
+                <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
+                        <div class="artroU">
+                            <div class="artro_img img01"></div>
+                            <div class="hoverTxt">
+                                <h4>애도의 장미</h4>
+                                <h5>샹이란 / shang yi ran / 商怡然</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 50x60cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2017</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artroU">
+                            <div class="artro_img img02"></div>
+                            <div class="hoverTxt">
+                                <h4>고양이와 사람</h4>
+                                <h5>로우쉰이 / lou xin yi / 娄芯怡</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 30x35.5cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2016</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="artroU">
+                            <div class="artro_img img03"></div>
+                            <div class="hoverTxt">
+                                <h4>무니의 꽃밭1</h4>
+                                <h5>하혜영 / /</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Acrylic on canvas</p>
+                                    <p>사이즈 | 130x130cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2019</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artroU">
+                            <div class="artro_img img04"></div>
+                            <div class="hoverTxt">
+                                <h4>바다를 보다</h4>
+                                <h5>정셩 / zeng sheng / 曾圣</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 80x100cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2011</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="artroU">
+                            <div class="artro_img img05"></div>
+                            <div class="hoverTxt">
+                                <h4>다같이 돌자</h4>
+                                <h5>이재연 / Lee, Zae Yeon / 李在涓</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 60.6x72.7cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2015</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artroU">
+                            <div class="artro_img img06"></div>
+                            <div class="hoverTxt">
+                                <h4>공손한 자의 위로</h4>
+                                <h5>류용민 / liu yong min / 刘勇敏</h5>
+                                <div class="art_detail">
+                                    <p>기법 | 판화</p>
+                                    <p>사이즈 | 56x53cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2011</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="artroU">
+                            <div class="artro_img img07"></div>
+                            <div class="hoverTxt">
+                                <h4>우뚝 솟은 소나무</h4>
+                                <h5>통쟌후 / tong jian hu / 佟建虎</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 80x60cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2014</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artroU">
+                            <div class="artro_img img08"></div>
+                            <div class="hoverTxt">
+                                <h4>적절하지 않는 낭만</h4>
+                                <h5>라이엔핑 / lai yan ping / 赖燕萍</h5>
+                                <div class="art_detail">
+                                    <p>기법 | 판화</p>
+                                    <p>사이즈 | 44x59cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2014</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="artroU">
+                            <div class="artro_img img09"></div>
+                            <div class="hoverTxt">
+                                <h4>빛 찾아가기(호흡하기)</h4>
+                                <h5>유화수 / Yoo Hwasu /</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Fabric,Oil on canvas</p>
+                                    <p>사이즈 | 72.6 x 52.8cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2018</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="artroU">
+                            <div class="artro_img img10"></div>
+                            <div class="hoverTxt">
+                                <h4>Epidermis world 45</h4>
+                                <h5>홍지영 / /</h5>
+                                <div class="art_detail">
+                                    <p>기법 | Oil on canvas</p>
+                                    <p>사이즈 | 116.8x91cm</p>
+                                    <p>장르 | 평면회화</p>
+                                    <p>제작연도 | 2020</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            
         </div>
     </section>
 </body>
